--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/cosmic_cms
+MONGO_URI=mongodb+srv://prashantdesale259:GnaW3cQjM1rvjwcT@cluster0.uczwq2p.mongodb.net/cosmic-web?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=Asdfghjkl0219
 EMAIL_SERVICE=gmail
 EMAIL_USERNAME=your-email@gmail.com
