--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://prashantdesale259:GnaW3cQjM1rvjwcT@cluster0.uczwq2p.mongodb.net/cosmic-web?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://127.0.0.1:27017/cosmic-web-cms
 JWT_SECRET=Asdfghjkl0219
 EMAIL_SERVICE=gmail
 EMAIL_USERNAME=your-email@gmail.com
@@ -9,4 +9,4 @@ EMAIL_FROM=noreply@cosmicenergy.com
 CLOUD_NAME=your-cloudinary-name
 CLOUD_API_KEY=your-cloudinary-api-key
 CLOUD_API_SECRET=your-cloudinary-api-secret
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5174
