--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^6.2.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "dotenv": "^17.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
