--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://kadambhakti0219:GTnQbY6zHIbHWTD9@cluster0.yvnnf4d.mongodb.net/cosmic-web-cms
+MONGO_URI=mongodb://127.0.0.1:27017/cosmic-web-cms
 JWT_SECRET=Asdfghjkl0219
 EMAIL_SERVICE=gmail
 EMAIL_USERNAME=kadambhakti0219@gmail.com
